tests/baselines/reference/transpile/Generates expected syntactic diagnostics.errors.txt
file.ts(1,3): error TS1005: ';' expected.


==== file.ts (1 errors) ====
    a b
      ~
!!! error TS1005: ';' expected.